--- a/js-storefront/spartacusstore/package.json
+++ b/js-storefront/spartacusstore/package.json
@@ -55,7 +55,8 @@
     "rxjs": "^6.6.0",
     "ts-loader": "^9.3.1",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "cross-env": "^7.0.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.9",
