--- a/js-storefront/b2bspastore/angular.json
+++ b/js-storefront/b2bspastore/angular.json
@@ -65,7 +65,12 @@
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": {
+                "styles": {
+                  "inlineCritical": false
+                }
+              }
             },
             "development": {
               "buildOptimizer": false,
