--- a/js-storefront/spartacusstore/package.json
+++ b/js-storefront/spartacusstore/package.json
@@ -9,7 +9,7 @@
     "test": "ng test",
     "dev:ssr": "ng run spartacusstore:serve-ssr",
     "serve:ssr": "node dist/spartacusstore/server/main.js",
-    "build:ssr": "yarn prepare-workspace && ng build --configuration production && ng run tenashop-se:server:production",
+    "build:ssr": "yarn prepare-workspace && ng build common-ui && ng build --configuration production && ng run spartacusstore:server:production",
     "prerender": "ng run spartacusstore:prerender",
     "prepare-workspace": "yarn --cwd ../../ && yarn install"
   },
