--- a/js-storefront/spartacusstore/angular.json
+++ b/js-storefront/spartacusstore/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/mystore",
+            "outputPath": "dist/mystore/browser",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
@@ -131,6 +131,65 @@
               ]
             }
           }
+        },
+        "server": {
+          "builder": "@angular-devkit/build-angular:server",
+          "options": {
+            "outputPath": "dist/mystore/server",
+            "main": "server.ts",
+            "tsConfig": "tsconfig.server.json",
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "node_modules/"
+              ]
+            },
+            "inlineStyleLanguage": "scss"
+          },
+          "configurations": {
+            "production": {
+              "outputHashing": "media"
+            },
+            "development": {
+              "optimization": false,
+              "sourceMap": true,
+              "extractLicenses": false,
+              "vendorChunk": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve-ssr": {
+          "builder": "@nguniversal/builders:ssr-dev-server",
+          "configurations": {
+            "development": {
+              "browserTarget": "mystore:build:development",
+              "serverTarget": "mystore:server:development"
+            },
+            "production": {
+              "browserTarget": "mystore:build:production",
+              "serverTarget": "mystore:server:production"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "prerender": {
+          "builder": "@nguniversal/builders:prerender",
+          "options": {
+            "routes": [
+              "/"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "browserTarget": "mystore:build:production",
+              "serverTarget": "mystore:server:production"
+            },
+            "development": {
+              "browserTarget": "mystore:build:development",
+              "serverTarget": "mystore:server:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
