--- a/js-storefront/spartacusstore/package.json
+++ b/js-storefront/spartacusstore/package.json
@@ -6,7 +6,11 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run mystore:serve-ssr",
+    "serve:ssr": "node dist/mystore/server/main.js",
+    "build:ssr": "ng build && ng run mystore:server",
+    "prerender": "ng run mystore:prerender"
   },
   "private": true,
   "dependencies": {
@@ -17,6 +21,7 @@
     "@angular/forms": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
+    "@angular/platform-server": "^15.2.9",
     "@angular/router": "^15.2.0",
     "@angular/service-worker": "^15.2.9",
     "@fontsource/open-sans": "^4.5.14",
@@ -25,6 +30,7 @@
     "@ngrx/effects": "^15.3.0",
     "@ngrx/router-store": "^15.3.0",
     "@ngrx/store": "^15.3.0",
+    "@nguniversal/express-engine": "^15.2.1",
     "@spartacus/asm": "~6.6.0",
     "@spartacus/assets": "~6.6.0",
     "@spartacus/cart": "~6.6.0",
@@ -33,6 +39,7 @@
     "@spartacus/order": "~6.6.0",
     "@spartacus/pdf-invoices": "~6.6.0",
     "@spartacus/product": "~6.6.0",
+    "@spartacus/setup": "~6.6.1",
     "@spartacus/smartedit": "~6.6.0",
     "@spartacus/storefinder": "~6.6.0",
     "@spartacus/storefront": "~6.6.0",
@@ -41,11 +48,13 @@
     "@spartacus/user": "~6.6.0",
     "angular-oauth2-oidc": "^15.0.1",
     "bootstrap": "^4.6.2",
+    "express": "^4.15.2",
     "i18next": "^21.10.0",
     "i18next-http-backend": "^1.4.5",
     "i18next-resources-to-backend": "^1.1.2",
     "ngx-infinite-scroll": "^15.0.0",
     "rxjs": "^6.6.0",
+    "ts-loader": "^9.4.4",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -53,8 +62,11 @@
     "@angular-devkit/build-angular": "^15.2.10",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
+    "@nguniversal/builders": "^15.2.1",
     "@spartacus/schematics": "^6.6.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^14.15.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
