--- a/js-storefront/spartacusstore/package.json
+++ b/js-storefront/spartacusstore/package.json
@@ -10,6 +10,7 @@
     "dev:ssr": "ng run spartacusstore:serve-ssr",
     "serve:ssr": "node dist/spartacusstore/server/main.js",
     "build:ssr": "ng build && ng run spartacusstore:server",
+    "dev:ssr:dev": "cross-env   NODE_TLS_REJECT_UNAUTHORIZED=0 ng run   spartacusstore:serve-ssr",
     "prerender": "ng run spartacusstore:prerender"
   },
   "private": true,
@@ -60,6 +61,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.10",
+    "@angular-devkit/schematics": "^15.2.9",
     "@angular/cli": "~15.2.10",
     "@angular/compiler-cli": "^15.2.0",
     "@nguniversal/builders": "^15.2.1",
@@ -67,6 +69,7 @@
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^14.15.0",
+    "cross-env": "^7.0.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
