--- a/core-customize/manifest.json
+++ b/core-customize/manifest.json
@@ -1,5 +1,11 @@
 {
     "commerceSuiteVersion": "2211.20",
+    "extensionPacks" : [
+	{
+		"name" : "hybris-b2ctelco-suite",
+		"version" : "2302.6"
+	}
+	],
     "enableImageProcessingService": true,
     "extensions": [
         "cloudmediaconversion",
